--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "identity-obj-proxy": "^3.0.0",
+    "jsdoc": "^3.6.7",
     "lint": "^0.7.0",
     "prettier": "^2.2.1",
     "prettier-webpack-plugin": "^1.2.0",
@@ -76,6 +77,7 @@
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
     "ts-node": "^9.1.1",
+    "typedoc": "^0.21.8",
     "typescript": "^4.2.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.30.0",
@@ -117,6 +119,7 @@
     "react-loki": "^1.2.0",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.1",
+    "react-router-redux": "^4.0.8",
     "reduct": "^3.3.1",
     "redux-saga": "^1.1.3",
     "sass-loader": "^11.0.1",
