--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "proj",
+  "name": "auth-test",
   "version": "1.0.0",
   "description": "",
   "main": "index.jsx",
@@ -9,7 +9,8 @@
     "loki:update": "npm run build-storybook && npx loki update --requireReference --reactUri file:./storybook-static",
     "loki:approve": "npx loki approve",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "docs": "typedoc ./src/*"
   },
   "devDependencies": {
     "@babel/core": "^7.13.14",
@@ -46,6 +47,7 @@
     "@webpack-cli/serve": "^1.3.1",
     "babel-loader": "^8.2.2",
     "babel-preset-env": "^1.7.0",
+    "better-docs": "^2.3.2",
     "classnames": "^2.3.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.2.0",
@@ -62,6 +64,8 @@
     "html-webpack-plugin": "^5.3.1",
     "identity-obj-proxy": "^3.0.0",
     "jsdoc": "^3.6.7",
+    "jsdoc-react": "^1.0.0",
+    "jsdoc-react-proptypes": "^1.0.3",
     "lint": "^0.7.0",
     "prettier": "^2.2.1",
     "prettier-webpack-plugin": "^1.2.0",
